k8s-app/k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: go-filesystem
  labels:
    name: go-filesystem
    module: Namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  namespace: go-filesystem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pods
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: sing3demons/filesystem:0.1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 4
            failureThreshold: 4
          livenessProbe:
            exec:
              command:
                - cat
                - /tmp/live
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-server
  namespace: go-filesystem
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30001
    
# apiVersion: v1
# kind: Service
# metadata:
#   name: go-server
#   namespace: go-filesystem
# spec:
#   selector:
#     app: server
#   ports:
#   - port: 8080
#     targetPort: 8080
