k8s-app/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server-ingress
  namespace: go-filesystem
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kp.sing3demons
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-server
            port:
              number: 8080
